# overthink_black

./: .env.example  .gitignore  API_key.py  CLAUDE.md  README.md  a.py  change.py  deepseek_main.py  deepseek_once.py  main.py  model.py  prompts.py  pyproject.toml  qwen_main.py  requirements.txt  results.jsonl  svamp_result.jsonl  test.py  utils.py  算法说明.md
__MACOSX/overthink_black/swanlog/: ._run-20250901_164151-gkehr7ov0o91455qisqze
data/gsm8k/: gsm8k_10_change.jsonl  gsm8k_all.json  gsm8k_change.jsonl  gsm8k_result.json
data/math/: math_10_change.jsonl  math_all.json  math_change.jsonl  math_result.json
data/svamp/: svamp_10_change.jsonl  svamp_all.json  svamp_change.jsonl  svamp_final.jsonl  svamp_result.json  svamp_test.jsonl
