[project]
name = "overthink-black"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "swanlab>=0.6.8",
]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"
