[project]
name = "overthink-black"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.3.3",
    "openai>=1.102.0",
    "swanlab>=0.6.9",
]
[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
